Add readme file details and add changes
